[package]
name = "semaphore-key"
version = "0.1.0"
edition = "2021"
authors = ["Nelius de Lange"]
description = "A Rust library to control thread access by key using a shared semaphore"
repository = "https://github.com/neliusdelange/semaphore-key"
homepage = "https://github.com/neliusdelange/semaphore-key"
license = "LGPL-2.1-only"
categories = ["asynchronous", "concurrency"]
keywords = ["concurrency", "thread", "semaphore", "key", "parallel"]

[dependencies]
once_cell = "1.16.0"
tokio = { version = "1", features = ["sync"] }