[package]
name = "semaphore-key"
version = "1.0.2"
edition = "2021"
authors = ["Nelius de Lange"]
description = "A Rust library to control concurrent thread access by key using a shared semaphore"
repository = "https://github.com/neliusdelange/semaphore-key"
homepage = "https://github.com/neliusdelange/semaphore-key"
license = "LGPL-2.1-only"
categories = ["asynchronous", "concurrency"]
keywords = ["concurrency", "thread", "semaphore", "key", "parallel"]

[dependencies]
log = "0.4"
once_cell = "1.16.0"
tokio = { version = "1", features = ["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
simple_logger = "4.0.0"